feat: #1507 Enhance the prompt and parsing of LLM response Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>